// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#knex can emit migration 1`] = `
"// More info: http://knexjs.org/#Schema-createTable

exports.up = async function up(knex) {
  /* Note: no nested types detected */

  return knex.schema.createTable(\\"test\\", (table) => {
    table.uuid(\\"id\\").notNullable().primary();
    table.string(\\"email\\", 40).notNullable();
    table.string(\\"first_name\\", 20).notNullable();
    table.string(\\"last_name\\", 20).notNullable();
    table.boolean(\\"is_active\\").notNullable();
    table.datetime(\\"created_at\\").notNullable();
    table.datetime(\\"modified_at\\").notNullable();
    table.string(\\"catch_phrase\\", 60).notNullable();
    table.string(\\"company_name\\", 20).notNullable();
    table.integer(\\"credits\\").enum('1', '15', '20', '10', '0', '11', '7', '9').notNullable();
    table.decimal(\\"sales_score\\", 10, 8).notNullable();
    table.string(\\"location\\", 20).enum('nyc', 'remote', 'denver').notNullable();
    table.string(\\"profile\\", 400).unique();
})

};

exports.down = async function down(knex) {
  await knex.schema.dropTableIfExists(\\"test\\");
};
"
`;

exports[`#knex can emit migration for nested type 1`] = `
"// More info: http://knexjs.org/#Schema-createTable

exports.up = async function up(knex) {
  await knex.schema.createTable(\\"users_notes\\", (table) => {
    table.increments(\\"id\\");
    table.string(\\"text\\", 20).notNullable();
})
;


  return knex.schema.createTable(\\"users_sparse\\", (table) => {
    table.increments(\\"id\\");
    table.string(\\"name\\", 20).notNullable();
    table.integer(\\"notes\\").references('id').inTable('users_notes');
})

};

exports.down = async function down(knex) {
  await knex.schema.dropTableIfExists(\\"users_notes\\");
  await knex.schema.dropTableIfExists(\\"users_sparse\\");
};
"
`;

exports[`#knex can emit migration for people json 1`] = `
"// More info: http://knexjs.org/#Schema-createTable

exports.up = async function up(knex) {
  /* Note: no nested types detected */

  return knex.schema.createTable(\\"people\\", (table) => {
    table.string(\\"name\\", 40).notNullable().unique();
    table.integer(\\"height\\");
    table.integer(\\"mass\\");
    table.string(\\"hair_color\\", 20).notNullable();
    table.string(\\"skin_color\\", 20);
    table.string(\\"eye_color\\", 20).enum('blue', 'yellow', 'red', 'brown', 'blue-gray', 'black', 'orange', 'hazel').notNullable();
    table.string(\\"birth_year\\", 20);
    table.string(\\"gender\\", 20).enum('male', 'n/a', 'female', 'hermaphrodite', 'none').notNullable();
    table.string(\\"homeworld\\", 40).notNullable();
    table.json(\\"films\\").notNullable();
    table.json(\\"species\\").notNullable();
    table.json(\\"vehicles\\").notNullable();
    table.json(\\"starships\\").notNullable();
    table.datetime(\\"created\\").notNullable();
    table.datetime(\\"edited\\").notNullable();
    table.string(\\"url\\", 40).notNullable().unique();
    table.increments(\\"id\\");
})

};

exports.down = async function down(knex) {
  await knex.schema.dropTableIfExists(\\"people\\");
};
"
`;

exports[`#knex can emit migration with bigInteger id 1`] = `
"// More info: http://knexjs.org/#Schema-createTable

exports.up = async function up(knex) {
  await knex.schema.createTable(\\"users_notes\\", (table) => {
    table.increments(\\"id\\");
    table.string(\\"text\\", 20).notNullable();
})
;


  return knex.schema.createTable(\\"users_big_int\\", (table) => {
    table.increments(\\"id\\");
    table.string(\\"name\\", 20).notNullable();
    table.integer(\\"notes\\").references('id').inTable('users_notes');
})

};

exports.down = async function down(knex) {
  await knex.schema.dropTableIfExists(\\"users_notes\\");
  await knex.schema.dropTableIfExists(\\"users_big_int\\");
};
"
`;

exports[`#mongoose can emit schema 1`] = `
"const mongoose = require(\\"mongoose\\");
const {Schema, Model, Types} = mongoose;

const Users = new Schema({
  id: {
    type: \\"UUID\\",
    unique: true,
    required: true,
  },
  email: {
    type: \\"String\\",
    required: true,
  },
  firstName: {
    type: \\"String\\",
    required: true,
  },
  lastName: {
    type: \\"String\\",
    required: true,
  },
  isActive: {
    type: \\"Boolean\\",
    required: true,
  },
  createdAt: {
    type: \\"Date\\",
    required: true,
  },
  modifiedAt: {
    type: \\"Date\\",
    required: true,
  },
  catchPhrase: {
    type: \\"String\\",
    required: true,
  },
  companyName: {
    type: \\"String\\",
    required: true,
  },
  credits: {
    type: \\"Number\\",
    required: true,
    enum: [\\"1\\", \\"15\\", \\"20\\", \\"10\\", \\"0\\", \\"11\\", \\"7\\", \\"9\\"],
  },
  salesScore: {
    type: \\"Float\\",
    required: true,
  },
  location: {
    type: \\"String\\",
    required: true,
    enum: [\\"nyc\\", \\"remote\\", \\"denver\\"],
  },
  profile: {
    type: \\"String\\",
    unique: true,
  }});

const usersModel = mongoose.model(\\"users\\", Users);
module.exports.Users = usersModel;
"
`;

exports[`#mongoose can emit schema for people json 1`] = `
"const mongoose = require(\\"mongoose\\");
const {Schema, Model, Types} = mongoose;

const People = new Schema({
  name: {
    type: \\"String\\",
    unique: true,
    required: true,
  },
  height: {
    type: \\"Number\\",
  },
  mass: {
    type: \\"Number\\",
  },
  hairColor: {
    type: \\"String\\",
    required: true,
  },
  skinColor: {
    type: \\"String\\",
  },
  eyeColor: {
    type: \\"String\\",
    required: true,
    enum: [\\"blue\\", \\"yellow\\", \\"red\\", \\"brown\\", \\"blue-gray\\", \\"black\\", \\"orange\\", \\"hazel\\"],
  },
  birthYear: {
    type: \\"String\\",
  },
  gender: {
    type: \\"String\\",
    required: true,
    enum: [\\"male\\", \\"n/a\\", \\"female\\", \\"hermaphrodite\\", \\"none\\"],
  },
  homeworld: {
    type: \\"String\\",
    required: true,
  },
  films: {
    type: \\"Array\\",
    required: true,
  },
  species: {
    type: \\"Array\\",
    required: true,
  },
  vehicles: {
    type: \\"Array\\",
    required: true,
  },
  starships: {
    type: \\"Array\\",
    required: true,
  },
  created: {
    type: \\"Date\\",
    unique: true,
    required: true,
  },
  edited: {
    type: \\"Date\\",
    unique: true,
    required: true,
  },
  url: {
    type: \\"String\\",
    unique: true,
    required: true,
  },
  id: {
    type: \\"Number\\",
    unique: true,
    required: true,
  }});

const peopleModel = mongoose.model(\\"people\\", People);
module.exports.People = peopleModel;
"
`;

exports[`#mongoose can emit schema with nested types 1`] = `
"const mongoose = require(\\"mongoose\\");
const {Schema, Model, Types} = mongoose;

const UsersSparse = new Schema({
  id: {
    type: \\"Number\\",
    unique: true,
    required: true,
  },
  name: {
    type: \\"String\\",
    required: true,
  },
  notes: {
    type: \\"Array\\",
    required: true,
  }});

const usersSparseModel = mongoose.model(\\"usersSparse\\", UsersSparse);
module.exports.UsersSparse = usersSparseModel;
const mongoose = require(\\"mongoose\\");
const {Schema, Model, Types} = mongoose;

const UsersNotes = new Schema({
  id: {
    type: \\"Number\\",
    unique: true,
    required: true,
  },
  text: {
    type: \\"String\\",
    required: true,
  }});

const usersNotesModel = mongoose.model(\\"usersNotes\\", UsersNotes);
module.exports.UsersNotes = usersNotesModel;
"
`;

exports[`#typescript can emit interface for nested types 1`] = `
"export interface UsersSparse {
  id: number;
  name: string;
  notes: UsersNotes[];
};

export interface UsersNotes {
  id: number;
  text: string;
};

"
`;

exports[`#typescript can emit interface for people json 1`] = `
"export interface People {
  name: string;
  height?: number  | null;
  mass?: number  | null;
  hairColor: string;
  skinColor?: string  | null;
  eyeColor: \\"blue\\" | \\"yellow\\" | \\"red\\" | \\"brown\\" | \\"blue-gray\\" | \\"black\\" | \\"orange\\" | \\"hazel\\";
  birthYear?: string  | null;
  gender: \\"male\\" | \\"n/a\\" | \\"female\\" | \\"hermaphrodite\\" | \\"none\\";
  homeworld: string;
  films: any[];
  species: any[];
  vehicles: any[];
  starships: any[];
  created: Date;
  edited: Date;
  url: string;
  id: number;
};

"
`;

exports[`#typescript can emit interface(s) 1`] = `
"export interface Users {
  id: string;
  email: string;
  firstName: string;
  lastName: string;
  isActive: boolean;
  createdAt: Date;
  modifiedAt: Date;
  catchPhrase: string;
  companyName: string;
  credits: \\"1\\" | \\"15\\" | \\"20\\" | \\"10\\" | \\"0\\" | \\"11\\" | \\"7\\" | \\"9\\";
  salesScore: number;
  location: \\"nyc\\" | \\"remote\\" | \\"denver\\";
  profile?: string  | null;
};

"
`;
